<resources>
    <string name="app_name">Newspaper</string>
    <string name="radio_lang_ru">Russian</string>
    <string name="radio_lang_eng">English</string>
    <string name="radio_cat_business">Business</string>
    <string name="radio_cat_general">Business</string>
    <string name="radio_cat_sport">Sport</string>
    <string name="radio_rus">Russia</string>
    <string name="radio_usa">USA</string>
    <string name="radio_ukr">Ukraine</string>
    <string name="radio_cat">Category</string>
    <string name="radio_country">Country</string>

    <string name="radio_theme">Theme</string>
    <string name="radio_theme_light">Light</string>
    <string name="radio_theme_dark">Dark</string>

    <string-array name="api_category">
        <item>General</item>
        <item>Entertainment</item>
        <item>Sports</item>
        <item>Business</item>
        <item>Technology</item>
        <item>Health</item>
        <item>Science</item>
    </string-array>

    <string name="no_image">https://st3.depositphotos.com/23594922/31822/v/600/depositphotos_318221368-stock-illustration-missing-picture-page-for-website.jpg</string>
</resources>