<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/settings_fragment_root"
    tools:context=".view.fragments.SettingsFragment">

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/black"
            android:layout_margin="8dp"
            android:text="@string/radio_country"/>
        <RadioButton
            android:id="@+id/radio_rus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textColor="@color/black"
            android:text="@string/radio_rus"/>
        <RadioButton
            android:id="@+id/radio_usa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textColor="@color/black"
            android:text="@string/radio_usa"/>
        <RadioButton
            android:id="@+id/radio_ukr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textColor="@color/black"
            android:text="@string/radio_ukr"/>
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radio_group_themes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="200dp" >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/black"
            android:layout_margin="8dp"
            android:text="@string/radio_theme"/>

        <RadioButton
            android:id="@+id/radio_theme_light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textColor="@color/black"
            android:text="@string/radio_theme_light"/>
        <RadioButton
            android:id="@+id/radio_theme_dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textColor="@color/black"
            android:text="@string/radio_theme_dark"/>
    </RadioGroup>

</FrameLayout>